--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -127,3 +127,39 @@
 .icons{
     margin:0px 40px;
 }
+@media screen and (max-width:576px){
+    .header{
+        flex-direction: column;
+        padding: 50px 0px;
+    }
+    .nav-li{
+        gap: 20px;
+        margin: 30px 0px;
+    }
+    .sec1{
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    .img{
+        height: 300px;
+        margin-bottom: 50px;
+    }
+    .sec2{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        padding: 10px 0px; 
+        margin: 50px 50px;   
+    }
+    .sec3-title{
+        font-size: 20px;
+    }
+    .sec3-div1{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .sec4{
+        flex-direction: column-reverse;
+        margin: 30px 20px;
+        text-align: center;
+    }
+}
